tests/neg/semantic_funcptr_call_non_funcptr.baa
// EXPECT: ليس دالة ولا مؤشر دالة

صحيح الرئيسية() {
    صحيح ف = ١.
    صحيح ن = ف(١).
    إرجع ٠.
}

